added #mensa with NN